--- a/css/index.scss
+++ b/css/index.scss
@@ -201,9 +201,9 @@ $telFontSize:36px;
 }
 
 
-/*tbody*/
+/*in_tbody*/
 
-.tbody {
+.in_tbody {
     width: 100%;
     height: 160px;
     overflow: hidden;
@@ -260,4 +260,4 @@ $telFontSize:36px;
 }
 
 
-/*tbody end*/
+/*in_tbody end*/
