--- a/css/public.scss
+++ b/css/public.scss
@@ -124,6 +124,63 @@ li {
         }
     }
     /*top end*/
+    /*in_tbody*/
+    .in_tbody {
+        width: 100%;
+        height: 160px;
+        overflow: hidden;
+        .logo {
+            width: 224px;
+            height: 141px;
+            float: left;
+            margin-right: 90px;
+        }
+        .containe>div:nth-of-type(2) {
+            float: left;
+            width: 405px;
+            padding-top: 31px;
+        }
+        .search {
+            height: 33px;
+            width: 397px;
+            background-color: $activeBgColor;
+            margin: 5px 0 0 5px;
+            input {
+                height: 26px;
+                width: 317px;
+                color: #B0B0B0;
+                margin: 3px 0 0 3px;
+                display: block;
+                float: left;
+                padding-left: 5px;
+            }
+            button {
+                background-color: $activeBgColor;
+                color: #fff;
+                font-size: $navAndTitleAndSearchFontSize;
+                line-height: 33px;
+                height: 33px;
+                width: 72px;
+                cursor: pointer;
+                display: block;
+                float: left;
+            }
+        }
+        .header_ad {
+            float: right;
+            a {
+                display: block;
+                float: left;
+            }
+            a:first-of-type {
+                margin-top: -20px;
+            }
+            a:last-of-type {
+                margin-top: 30px;
+            }
+        }
+    }
+    /*in_tbody end*/
     /*tbody*/
     .tbody {
         width: 100%;
@@ -181,7 +238,9 @@ li {
         font-family: $navAndClassifyFontFamily;
         .active {
             background-color: $activeBgColor;
-            color: $navClassifyColor;
+            a {
+                color: $navClassifyColor;
+            }
         }
         .menu {
             position: relative;
@@ -293,6 +352,11 @@ li {
             }
         }
         li:last-of-type {
+            width: 135px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            color: $activeBgColor;
             a {
                 color: $activeBgColor;
             }
