--- a/css/public.scss
+++ b/css/public.scss
@@ -340,7 +340,7 @@ li {
 #middle {
     background-color: #fff;
     overflow: hidden;
-    .addr {
+    .crumbs {
         @extend .containe;
         overflow: hidden;
         margin: 15px auto 30px auto;
