--- a/css/com_details.css
+++ b/css/com_details.css
@@ -1,1 +1,494 @@
-null
+#middle .section_top {
+  overflow: hidden;
+}
+
+#middle .section_top .pro_img {
+  width: 473px;
+  height: 588px;
+  position: relative;
+  float: left;
+}
+
+#middle .section_top .pro_img .img_box {
+  width: 100%;
+  height: 476px;
+  border: 1px solid #d2d2d2;
+  position: relative;
+  cursor: crosshair;
+  margin-bottom: 24px;
+}
+
+#middle .section_top .pro_img .img_box img {
+  display: block;
+}
+
+#middle .section_top .pro_img .img_box .zoom {
+  width: 118.75px;
+  height: 119px;
+  background-color: rgba(185, 175, 175, 0.4);
+  position: absolute;
+  top: 0;
+}
+
+#middle .section_top .pro_img .bigimg {
+  position: absolute;
+  width: 100%;
+  height: 476px;
+  border: 1px solid #d2d2d2;
+  top: 0;
+  left: 500px;
+  display: none;
+}
+
+#middle .section_top .pro_img .bigimg > img {
+  position: absolute;
+}
+
+#middle .section_top .pro_img .img_wrap {
+  width: 100%;
+  height: 86px;
+  overflow: hidden;
+  position: relative;
+}
+
+#middle .section_top .pro_img .img_wrap ul {
+  width: 412px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+#middle .section_top .pro_img .img_wrap ul li {
+  float: left;
+  cursor: pointer;
+  width: 85px;
+  height: 84px;
+  border: 1px solid #d2d2d2;
+  margin: 0 8px;
+}
+
+#middle .section_top .pro_img .img_wrap ul li img {
+  display: block;
+  width: 100%;
+}
+
+#middle .section_top .pro_img .img_wrap ul .active {
+  border: 1px solid #B90101;
+}
+
+#middle .section_top .pro_img .img_wrap .prev,
+#middle .section_top .pro_img .img_wrap .next {
+  width: 30px;
+  height: 86px;
+  display: block;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+}
+
+#middle .section_top .pro_img .img_wrap .prev > img,
+#middle .section_top .pro_img .img_wrap .next > img {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#middle .section_top .pro_img .img_wrap .prev::after,
+#middle .section_top .pro_img .img_wrap .next::after {
+  content: '';
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#middle .section_top .pro_img .img_wrap .next {
+  right: 0;
+}
+
+#middle .section_top .details {
+  width: 697px;
+  margin-left: 28px;
+  float: left;
+  padding-top: 15px;
+}
+
+#middle .section_top .details > h2 {
+  font-size: 18px;
+  color: #000;
+  margin: 0 0 5px 24px;
+}
+
+#middle .section_top .details > p {
+  color: #B90101;
+  font-size: 14px;
+  width: 543px;
+  line-height: 25px;
+  margin-left: 24px;
+}
+
+#middle .section_top .details .price {
+  background-color: #e5e5e5;
+  padding: 46px 24px;
+  margin: 5px 0 27px 0;
+}
+
+#middle .section_top .details .price > p {
+  color: #666;
+  font-size: 14px;
+}
+
+#middle .section_top .details .price > p > small {
+  font-size: 14px;
+  display: inline-block;
+  width: 78px;
+}
+
+#middle .section_top .details .price p:last-of-type {
+  height: 47px;
+  line-height: 47px;
+}
+
+#middle .section_top .details .price p:last-of-type small {
+  vertical-align: top;
+}
+
+#middle .section_top .details .price p:last-of-type span {
+  color: #B90101;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+#middle .section_top .details .price p:last-of-type span em {
+  font-size: 18px;
+  font-style: normal;
+}
+
+#middle .section_top .details > ul {
+  border-top: 1px solid #E5E5E5;
+  border-bottom: 1px solid #E5E5E5;
+  height: 42px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+#middle .section_top .details > ul li {
+  float: left;
+  line-height: 42px;
+  color: #666;
+  font-size: 14px;
+  margin: 0 23px;
+}
+
+#middle .section_top .details > ul li:first-of-type {
+  margin-left: 85px;
+}
+
+#middle .section_top .details .color {
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+#middle .section_top .details .color > h3 {
+  margin: 14px 0 0 24px;
+  float: left;
+  color: #666;
+  font-size: 14px;
+  vertical-align: middle;
+  width: 75px;
+}
+
+#middle .section_top .details .color > ul {
+  float: left;
+}
+
+#middle .section_top .details .color > ul li {
+  float: left;
+  width: 45px;
+  height: 44px;
+  border: 1px solid #d2d2d2;
+  cursor: pointer;
+  margin: 0 5px;
+}
+
+#middle .section_top .details .color > ul li img {
+  display: block;
+  width: 100%;
+  margin-top: 3px;
+}
+
+#middle .section_top .details .count {
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+#middle .section_top .details .count > h3 {
+  margin: 14px 0 0 24px;
+  float: left;
+  color: #666;
+  font-size: 14px;
+  vertical-align: middle;
+  width: 75px;
+}
+
+#middle .section_top .details .count input {
+  float: left;
+  line-height: 39px;
+  border: 1px solid #d2d2d2;
+  border-right: none;
+  text-align: center;
+  width: 54px;
+  margin-left: 5px;
+  color: #666;
+  font-size: 16px;
+}
+
+#middle .section_top .details .count span {
+  float: left;
+  width: 16px;
+  height: 39px;
+}
+
+#middle .section_top .details .count span .add,
+#middle .section_top .details .count span .minus {
+  text-align: center;
+  line-height: 20px;
+  font-size: 16px;
+  color: #666;
+  background-color: transparent;
+  float: left;
+  width: 16px;
+  height: 20px;
+  border: 1px solid #d2d2d2;
+  cursor: pointer;
+}
+
+#middle .section_top .details .count span .add {
+  border-bottom: none;
+}
+
+#middle .section_top .details .count span .minus {
+  height: 21px;
+}
+
+#middle .section_top .details .shopping {
+  overflow: hidden;
+  margin: 0 0 30px 104px;
+}
+
+#middle .section_top .details .shopping > a {
+  display: block;
+  float: left;
+  height: 51px;
+  line-height: 51px;
+  text-align: center;
+  border: 1px solid #B90101;
+  width: 188px;
+  font-size: 18px;
+  background-color: #FDE1E1;
+  margin-right: 11px;
+}
+
+#middle .section_top .details .shopping a:first-of-type {
+  background-color: #B90101;
+  color: #fff;
+}
+
+#middle .section_top .details .shopping a:last-of-type {
+  width: 122px;
+}
+
+#middle .section_top .details .shopping a:last-of-type img {
+  vertical-align: middle;
+  margin-right: 9px;
+}
+
+#middle .section_top .details .service {
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+#middle .section_top .details .service > h3 {
+  margin: 0 0 0 24px;
+  float: left;
+  color: #666;
+  font-size: 14px;
+  vertical-align: middle;
+  width: 75px;
+}
+
+#middle .section_top .details .service ul {
+  overflow: hidden;
+  width: 465px;
+}
+
+#middle .section_top .details .service ul li {
+  float: left;
+  color: #666;
+  font-size: 14px;
+  width: 113px;
+  margin-bottom: 8px;
+}
+
+#middle .shop_area {
+  height: 45px;
+  width: 100%;
+  background-color: #000;
+}
+
+#middle .shop_area .shop_search {
+  width: 151px;
+  height: 24px;
+  margin: 10px 70px 0 51px;
+  float: left;
+}
+
+#middle .shop_area .shop_search input {
+  width: 117px;
+  height: 22px;
+  border: 1px solid #B5B5B5;
+  border-right: none;
+  float: left;
+  font-size: 14px;
+  color: #666;
+  padding-left: 5px;
+}
+
+#middle .shop_area .shop_search button {
+  float: left;
+}
+
+#middle .shop_area .shop_search button img {
+  display: block;
+}
+
+#middle .shop_area > ul li {
+  float: left;
+  height: 45px;
+  line-height: 45px;
+  margin-right: 10px;
+}
+
+#middle .shop_area > ul li a {
+  display: block;
+  height: 100%;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  padding: 0 32px;
+}
+
+#middle .shop_area > ul li:hover a {
+  background-color: #B90101;
+}
+
+#middle .shop_area > ul .active a {
+  background-color: #B90101;
+}
+
+#middle .section_bottom .sidebar {
+  background-color: #F7F6F6;
+  width: 252px;
+  padding-top: 27px;
+}
+
+#middle .section_bottom .sidebar .local_search {
+  width: 252px;
+}
+
+#middle .section_bottom .sidebar .local_search > h3 {
+  background-color: #000;
+  height: 55px;
+  line-height: 55px;
+  padding-left: 6px;
+  width: 246px;
+  color: #fff;
+  font-size: 16px;
+}
+
+#middle .section_bottom .sidebar .local_search form {
+  border: 1px solid #B5B5B5;
+  border-top: none;
+  width: 250px;
+  padding: 14px 0 23px 0;
+  overflow: hidden;
+  text-align: center;
+}
+
+#middle .section_bottom .sidebar .local_search form > label {
+  color: #666;
+  font-size: 14px;
+  float: left;
+  margin-left: 28px;
+}
+
+#middle .section_bottom .sidebar .local_search form > input {
+  height: 21px;
+  border: 1px solid #EEE;
+  float: left;
+  margin-bottom: 13px;
+  color: #666;
+  padding-left: 5px;
+}
+
+#middle .section_bottom .sidebar .local_search form label:last-of-type {
+  margin: 0 6px;
+}
+
+#middle .section_bottom .sidebar .local_search form #keyword {
+  width: 130px;
+  clear: right;
+}
+
+#middle .section_bottom .sidebar .local_search form #begin,
+#middle .section_bottom .sidebar .local_search form #end {
+  width: 48px;
+}
+
+#middle .section_bottom .sidebar .local_search form #begin {
+  margin-left: 2px;
+}
+
+#middle .section_bottom .sidebar .local_search form a {
+  color: #000;
+  font-size: 14px;
+  display: block;
+  clear: both;
+}
+
+#middle .section_bottom .sidebar .custom_service {
+  width: 252px;
+  margin-top: 56px;
+}
+
+#middle .section_bottom .sidebar .custom_service > h3 {
+  background-color: #000;
+  height: 55px;
+  line-height: 55px;
+  padding-left: 6px;
+  width: 246px;
+  color: #fff;
+  font-size: 16px;
+}
+
+#middle .section_bottom .sidebar .custom_service > div {
+  border: 1px solid #B5B5B5;
+  border-top: none;
+  width: 250px;
+  padding: 12px 0 20px 0;
+  font-size: 14px;
+  color: #666;
+}
+
+#middle .section_bottom .sidebar .custom_service > div > h5 {
+  margin-left: 5px;
+  font-size: 14px;
+  color: #666;
+}
+
+#middle .section_bottom .sidebar .custom_service > div > span {
+  display: block;
+  margin-left: 33px;
+  margin-top: 12px;
+}
+
+#middle .section_bottom .sidebar .custom_service > div span:last-of-type {
+  margin-top: 3px;
+}
