--- a/css/com_details.css
+++ b/css/com_details.css
@@ -23,21 +23,19 @@
 }
 
 #middle .section_top .pro_img .img_box .zoom {
-  width: 118.75px;
-  height: 119px;
   background-color: rgba(185, 175, 175, 0.4);
   position: absolute;
   top: 0;
+  display: none;
 }
 
 #middle .section_top .pro_img .bigimg {
   position: absolute;
-  width: 100%;
-  height: 476px;
   border: 1px solid #d2d2d2;
   top: 0;
   left: 500px;
   display: none;
+  overflow: hidden;
 }
 
 #middle .section_top .pro_img .bigimg > img {
@@ -68,7 +66,8 @@
 
 #middle .section_top .pro_img .img_wrap ul li img {
   display: block;
-  width: 100%;
+  width: 98%;
+  margin: 0 auto;
 }
 
 #middle .section_top .pro_img .img_wrap ul .active {
@@ -85,22 +84,21 @@
   cursor: pointer;
 }
 
-#middle .section_top .pro_img .img_wrap .prev > img,
-#middle .section_top .pro_img .img_wrap .next > img {
-  display: inline-block;
-  vertical-align: middle;
+#middle .section_top .pro_img .img_wrap .prev {
+  background: url(../images/prev_icon.png) no-repeat center;
 }
 
-#middle .section_top .pro_img .img_wrap .prev::after,
-#middle .section_top .pro_img .img_wrap .next::after {
-  content: '';
-  height: 100%;
-  display: inline-block;
-  vertical-align: middle;
+#middle .section_top .pro_img .img_wrap .prev:hover {
+  background-image: url(../images/prev_icon_on.png);
 }
 
 #middle .section_top .pro_img .img_wrap .next {
   right: 0;
+  background: url(../images/next_icon.png) no-repeat center;
+}
+
+#middle .section_top .pro_img .img_wrap .next:hover {
+  background-image: url(../images/next_icon_on.png);
 }
 
 #middle .section_top .details {
@@ -214,6 +212,14 @@
   margin-top: 3px;
 }
 
+#middle .section_top .details .color > ul .active {
+  border: 1px solid #B90101;
+}
+
+#middle .section_top .details .color > ul li:hover {
+  border: 1px solid #B90101;
+}
+
 #middle .section_top .details .count {
   overflow: hidden;
   margin-bottom: 20px;
@@ -291,11 +297,11 @@
   color: #fff;
 }
 
-#middle .section_top .details .shopping a:last-of-type {
+#middle .section_top .details .shopping .add_love {
   width: 122px;
 }
 
-#middle .section_top .details .shopping a:last-of-type img {
+#middle .section_top .details .shopping .add_love img {
   vertical-align: middle;
   margin-right: 9px;
 }
@@ -387,6 +393,8 @@
   background-color: #F7F6F6;
   width: 252px;
   padding-top: 27px;
+  float: left;
+  margin-right: 10px;
 }
 
 #middle .section_bottom .sidebar .local_search {
@@ -410,6 +418,7 @@
   padding: 14px 0 23px 0;
   overflow: hidden;
   text-align: center;
+  background-color: #fff;
 }
 
 #middle .section_bottom .sidebar .local_search form > label {
@@ -475,6 +484,7 @@
   padding: 12px 0 20px 0;
   font-size: 14px;
   color: #666;
+  background-color: #fff;
 }
 
 #middle .section_bottom .sidebar .custom_service > div > h5 {
@@ -491,4 +501,329 @@
 
 #middle .section_bottom .sidebar .custom_service > div span:last-of-type {
   margin-top: 3px;
+}
+
+#middle .section_bottom .sidebar .hot_ad {
+  width: 252px;
+  margin-top: 56px;
+}
+
+#middle .section_bottom .sidebar .hot_ad > h3 {
+  background-color: #000;
+  height: 55px;
+  line-height: 55px;
+  padding-left: 6px;
+  width: 246px;
+  color: #fff;
+  font-size: 16px;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul {
+  border: 1px solid #B5B5B5;
+  border-top: none;
+  background-color: #fff;
+  padding-top: 45px;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li {
+  margin-bottom: 90px;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li a {
+  display: block;
+  width: 100%;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li a img {
+  display: block;
+  width: 100%;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li p {
+  font-size: 14px;
+  color: #666;
+  height: 20px;
+  line-height: 20px;
+  width: 85%;
+  margin: 33px 0 0 12px;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li p span {
+  color: #B90101;
+  font-weight: bold;
+  display: block;
+  float: right;
+  line-height: 20px;
+}
+
+#middle .section_bottom .sidebar .hot_ad ul li p em {
+  color: #fff;
+  background-color: #B90101;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  border-radius: 20px;
+  display: block;
+  font-style: normal;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  float: left;
+  margin-right: 3px;
+}
+
+#middle .section_bottom .main {
+  overflow: hidden;
+  width: 937px;
+  padding-top: 27px;
+}
+
+#middle .section_bottom .main > h3 {
+  height: 49px;
+  width: 906px;
+  padding-left: 31px;
+  color: #040404;
+  font-size: 16px;
+  line-height: 49px;
+  background-color: #E5E5E5;
+}
+
+#middle .section_bottom .main .summary {
+  width: 100%;
+  overflow: hidden;
+}
+
+#middle .section_bottom .main .summary .grade {
+  border: 1px solid #aaa;
+  width: 88px;
+  height: 134px;
+  padding-left: 45px;
+  margin-right: 11px;
+  float: left;
+}
+
+#middle .section_bottom .main .summary .grade > h5 {
+  font-weight: normal;
+  font-size: 14px;
+  color: #333;
+  margin-top: 38px;
+}
+
+#middle .section_bottom .main .summary .grade > span {
+  font-weight: bold;
+  font-size: 40px;
+  color: #B90101;
+  display: block;
+}
+
+#middle .section_bottom .main .summary .grade > span i {
+  font-style: normal;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+#middle .section_bottom .main .summary > ul {
+  overflow: hidden;
+  float: left;
+  width: 789px;
+  margin-top: 19px;
+}
+
+#middle .section_bottom .main .summary > ul li {
+  float: left;
+  margin: 5px 5px 5px 0;
+  border: 1px solid #d2d2d2;
+  color: #999;
+  height: 20px;
+  padding: 0 10px;
+  line-height: 20px;
+  font-size: 14px;
+}
+
+#middle .section_bottom .main .sort {
+  width: calc(100% - 28px);
+  height: 35px;
+  padding: 0 14px;
+  background-color: #F2F2F2;
+}
+
+#middle .section_bottom .main .sort li {
+  height: 35px;
+  float: left;
+  margin: 0 21px;
+}
+
+#middle .section_bottom .main .sort li a {
+  line-height: 35px;
+  display: block;
+  height: 100%;
+  color: #666;
+  font-size: 14px;
+}
+
+#middle .section_bottom .main .sort li:last-of-type {
+  float: right;
+}
+
+#middle .section_bottom .main .estimate {
+  width: 100%;
+}
+
+#middle .section_bottom .main .estimate > li {
+  width: 100%;
+  border-bottom: 1px solid #DCDCDC;
+  margin-bottom: 8px;
+  overflow: hidden;
+}
+
+#middle .section_bottom .main .estimate > li .user_info {
+  float: left;
+  margin-left: 23px;
+}
+
+#middle .section_bottom .main .estimate > li .user_info a {
+  font-size: 14px;
+  overflow: hidden;
+  display: block;
+  line-height: 35px;
+  margin-bottom: 4px;
+}
+
+#middle .section_bottom .main .estimate > li .user_info a img {
+  display: block;
+  width: 35px;
+  height: 35px;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -ms-border-radius: 35px;
+  -o-border-radius: 35px;
+  border-radius: 35px;
+  float: left;
+  margin-right: 5px;
+}
+
+#middle .section_bottom .main .estimate > li .user_info p {
+  font-size: 14px;
+  color: #666;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main {
+  float: right;
+  width: 725px;
+  margin-top: 8px;
+  padding-bottom: 7px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate {
+  position: relative;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate > ul {
+  height: 18px;
+  margin-bottom: 9px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate > ul li {
+  float: left;
+  width: 18px;
+  height: 18px;
+  background-image: url(../images/hx_icon.png);
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate > p {
+  color: #030303;
+  font-size: 14px;
+  line-height: 30px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate > span {
+  color: #666;
+  font-size: 14px;
+  line-height: 38px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .good,
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .msg {
+  position: absolute;
+  cursor: pointer;
+  bottom: 7px;
+  line-height: 25px;
+  color: #666;
+  font-size: 14px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .good img,
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .msg img {
+  vertical-align: top;
+  margin-right: 5px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .good {
+  left: 612px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .ori_estimate .msg {
+  left: 671px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .add_estimate {
+  border-top: 1px solid #DCDCDC;
+  padding: 8px 0 12px 0;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .add_estimate > h4 {
+  color: #666;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 30px;
+}
+
+#middle .section_bottom .main .estimate > li .estimate_main .add_estimate > p {
+  color: #030303;
+  font-size: 14px;
+  line-height: 30px;
+}
+
+#middle .section_bottom .main .estimate > li:first-of-type {
+  padding-top: 20px;
+}
+
+#middle .section_bottom .main .page {
+  width: 100%;
+  margin-top: 35px;
+  text-align: center;
+}
+
+#middle .section_bottom .main .page ul {
+  display: inline-block;
+}
+
+#middle .section_bottom .main .page ul li {
+  height: 17px;
+  float: left;
+  margin: 0 6px;
+}
+
+#middle .section_bottom .main .page ul a {
+  display: block;
+  line-height: 17px;
+  text-align: center;
+  padding: 0 5px;
+  font-size: 14px;
+}
+
+#middle .section_bottom .main .page ul .on a {
+  background-color: #B90101;
+  color: #fff;
+}
+
+#middle .section_bottom .main .page ul li:hover a {
+  background-color: #B90101;
+  color: #fff;
+}
+
+#middle .section_bottom .main .page ul li:nth-last-of-type(2) :hover {
+  background-color: transparent;
+  color: #666;
 }
